# UbiquiTimes

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Shuttle.toml  note.md
Gabage/: README.md  bot_message.rs  bot_message_communicator.rs  other_guild_repository.rs  sled_table.rs
Gabage/bot_message_communicator/: req_receiver.rs  req_sender.rs  res_receiver.rs
Gabage/other_server_repository/: sled_other_server_repository.rs  sled_other_times_repository.rs
Gabage/own_server_repository/sign/: keys.rs  keys_gen.rs
Gabage/shuttle_persist/: other_guild_repository.rs
ca_driver/: Cargo.toml  README.md
ca_driver/src/: error.rs  lib.rs  my_ca_driver.rs
commands/: Cargo.toml
commands/src/: bot_communicate.rs  bot_message.rs  bot_message_communicator.rs  botcom.rs  ca_driver.rs  commands.rs  db_query.rs  error.rs  global_data.rs  help_command.rs  initializer.rs  kvs.rs  lib.rs  list.rs  manual_commands.rs  master_webhook.rs  member_webhook.rs  other_server.rs  other_server_repository.rs  own_server.rs  own_server_data.rs  own_server_repository.rs  poise_commands.rs  sign.rs  types.rs  webhook.rs
commands/src/auto_commands/: member_webhook.rs
commands/src/bot_communicate/: send.rs
commands/src/bot_communicate_controller/: send.rs
commands/src/bot_message_communicator/: receiver.rs  reciever.rs  req_receiver.rs  req_sender.rs  res_receiver.rs  sender.rs  tmp.rs
commands/src/ca_driver/: my_ca_driver.rs
commands/src/commands/: spreading_commands.rs
commands/src/commands/setting_commands/: member_setting_commands.rs  server_setting_commands.rs
commands/src/db_query/: a_member_times_data.rs  a_server_data.rs  master_webhooks.rs  member_webhooks.rs  other_server_data.rs  other_server_times_data.rs  own_server_data.rs  own_server_times_data.rs
commands/src/manual_commands/: master_webhook.rs  member_webhook.rs
commands/src/master_webhook/: auto.rs  manual.rs
commands/src/member_webhook/: auto.rs  manual.rs
commands/src/other_server/: server.rs  times.rs
commands/src/other_server_repository/: sled_other_server_repository.rs  sled_other_times_repository.rs
commands/src/own_server/: server.rs  times.rs
commands/src/own_server_repository/: sled_own_server_repository.rs  sled_own_times_repository.rs
commands/src/poise_commands/: setting_commands.rs  spreading_commands.rs
commands/src/poise_commands/setting_commands/: member_setting_commands.rs  server_setting_commands.rs
commands/src/sign/: claims.rs  key_gen.rs  keys.rs  keys_gen.rs
commands/src/types/: botcom.rs  global_data.rs  own_server_data.rs  webhook.rs
common/: Cargo.toml
common/src/: commands_vec.rs  event_handler.rs  lib.rs
doc/: architecture.md
domain/: Cargo.toml  README.md
domain/src/: functions.rs  lib.rs  models.rs  repositorys.rs  traits.rs
domain/src/models/: communication.rs  guild_data.rs  sign.rs
domain/src/traits/: ca_driver.rs  communicators.rs  repositorys.rs  signer_verifier.rs
infrastructure/shuttle_pershist_repository/: .gitignore  Cargo.toml
infrastructure/shuttle_pershist_repository/src/: lib.rs  own_guild_repository.rs  own_times_repository.rs  persist_table.rs
infrastructure/sled_repository/: Cargo.toml
infrastructure/sled_repository/src/: error.rs  lib.rs  other_guild_repository.rs  other_times_repository.rs  own_guild_repository.rs  own_times_repository.rs  sled_table.rs
message_communicator/: Cargo.toml  README.md
message_communicator/src/: error.rs  lib.rs  request_receiver.rs  request_sender.rs  response_receiver.rs  traits.rs
migrations/: 20221225140000_ubiquitimes.sql
presenter/: README.md
presenter/commands/: Cargo.toml
presenter/commands/src/: global_data.rs
presenter/common/: Cargo.toml
presenter/discord/commands/: Cargo.toml
presenter/discord/commands/src/: commands_vec.rs  error.rs  global_data.rs  lib.rs  poise_commands.rs
presenter/discord/commands/src/poise_commands/: spreading_commands.rs
presenter/discord/commands/src/poise_commands/setting_commands/: member_setting_commands.rs  server_setting_commands.rs
presenter/discord/handler/: Cargo.toml
presenter/discord/handler/src/: error_handler.rs
presenter/discord/shuttle/: Cargo.toml
presenter/discord/shuttle/src/: main.rs
presenter/handler/: Cargo.toml  README.md
presenter/handler/src/: event_handler.rs  lib.rs
presenter/poise/: Cargo.toml
presenter/shuttle/: Cargo.toml
presenter/shuttle/src/: main.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
sb/: sb_directory.md
sb/commands/: Cargo.toml
sb/commands/src/: bot_communicate.rs  main.rs  webhook.rs
sb/crypt/: Cargo.toml
sb/crypt/src/: main.rs
sb/slcommands/: Cargo.toml
sb/slcommands/src/: commands.rs  lib.rs  list.rs  main.rs  master_webhook.rs
sb/slcommands/src/commands/: master_webhook.rs  member_webhook.rs
sb/sled/: Cargo.toml
sb/sled/src/: main.rs
signer_verifier/: Cargo.toml
signer_verifier/src/: error.rs  key_generator.rs  lib.rs  signer.rs  verifier.rs
ubiquitimes/poise/: Cargo.toml
ubiquitimes/poise/src/: main.rs
ubiquitimes/serenity/: Cargo.toml
ubiquitimes/serenity/src/: main.rs
ubiquitimes/shuttle/: Cargo.toml
ubiquitimes/shuttle/src/: main.rs
