[workspace]
resolver = "2"
members = [
    "./presenter/commands",
    "./domain",
    "./ca_driver",
    "./signer_verifier",
    "./infrastructure/sled_repository",
    "./presenter/handler",
    # "ubiquitimes/poise",
    "./presenter/shuttle",
    # "sb/commands",
    # "sb/slcommands",
    # "sb/crypt",
    # "sb/sled",
]

[workspace.package]
authors = ["neruneruna7"]
license-file = "LICENSE"
edition = "2021"

[profile.dev]
debug = 0

# cargo new ubiquitimes/serenity --name ubiquitimes-serenity --vcs none
# cargo shuttle init api/shuttle  --name api-shuttle
# cargo new sb/slcommands --name sb-slcommands --vcs none