[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rsa = "*"
jsonwebtoken = "*"

poise = "0.5.6"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

sqlx = { version = "0.7", features = ["sqlite", "migrate", "runtime-tokio"] }

chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"