[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rsa = "*"
jsonwebtoken = "*"

poise = "0.5.6"
anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

sqlx = { version = "0.7", features = ["sqlite", "migrate", "runtime-tokio"] }

sled = "0.34.7"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = "*"

reqwest = "0.11"


[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]