[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
sled_repository ={ path = "../infrastructure/sled_repository" }
message_communicator = { path = "../message_communicator" }
signer_verifier = { path = "../signer_verifier" }
ca_driver ={ path = "../ca_driver" }
poise = { version = "0.6.1", default-features = false }
anyhow = { version = "1.0", default-features = false }



# [dependencies.uuid]
# version = "1.6.1"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]