[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
anyhow = "1.0"

commands  = { path = "../commands" }
domain = { path = "../domain" }
ca_driver = { path = "../ca_driver" }
sled_repository ={ path = "../infrastructure/sled_repository"}
message_communicator = { path = "../message_communicator"}