[package]
name = "message_communicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
signer_verifier = { path = "../signer_verifier" }
sled_repository ={ path = "../infrastructure/sled_repository"}
ca_driver ={ path = "../ca_driver"}

poise = "*"
serde_json = "*"
