[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serenity = {version = "*", features = ["framework", "standard_framework"]}

tokio = { version = "1", features = ["full"] }

anyhow = "1.0"

dotenvy = "0.15.7"

tracing = "*"
tracing-subscriber = "*"
