[package]
name = "shuttle_pershist_repository"
version = "0.1.0"
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
shuttle-persist = "0.45.0"
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true


domain = { path = "../../domain" }

