[package]
name = "sled_repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sled = "0.34.7"
chrono = "0.4"
serde_json = "1.0"
# domainでreexportしているはずなのに，なぜかserdeも必要
serde = { version = "1.0", features = ["derive"] }
tokio = "*"

domain = { path = "../../domain" }