[package]
name = "sled_repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = { version = "0.34.7", default-features = false }
# chrono = { version = "0.4", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
tokio = "*"

domain = { path = "../../domain" }
