[package]
name = "ubiquitimes-poise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "*"
tokio = { version = "1", features = ["full"] }

dotenvy = "0.15.7"

tracing = "*"
tracing-subscriber = "*"

# sqlx = { version = "0.7.1", features = ["sqlite", "migrate", "runtime-tokio"] }

sled = "0.34.7"

commands = { path = "../../commands" }
common = { path = "../../common" }
