[package]
name = "crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
# rsa = {version = "*", features = ["sha2"]}
# jws = "*"

# hmac = "*"
rsa = {version = "*", features = ["sha2"]}
# jwt = "*"
sha2 = "*"

# josekit = "*"
# openssl = "*"
rsa-oaep-pss = "*"

jsonwebtoken = "*"
# jsonwebtoken-rustcrypto = "1"

serde = {version = "*", features = ["derive"]}
serde_json = "*"
# spki = "*"
# base64ct = "*"


# ring = "*"
# signature = "*"

# crypto = "*"