[package]
name = "ubiquitimes-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.37.0"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
tracing = "0.1.37"
tokio = "1.26.0"

sled = "0.34.7"

# sqlx = { version = "0.7.1", features = ["sqlite", "migrate", "runtime-tokio"] }

commands = { path = "../../commands" }
common = { path = "../../common" }
