[package]
name = "ubiquitimes-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.*"
poise = "0.6.1"
shuttle-serenity = "0.42.0"
shuttle-runtime = "0.42.0"
tokio = "1.36.0"

sled = "0.34.7"

# sqlx = { version = "0.7.1", features = ["sqlite", "migrate", "runtime-tokio"] }

commands = { path = "../../commands" }
common = { path = "../../common" }
domain = { path = "../../domain" }
sled_repository ={ path = "../../infrastructure/sled_repository" }
message_communicator = { path = "../../message_communicator" }
signer_verifier = { path = "../../signer_verifier" }
ca_driver ={ path = "../../ca_driver" }

