[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.6.1", default-features = false }
anyhow = { version = "1.0", default-features = false }

commands  = { path = "../commands" }
domain = { path = "../../../domain" }
message_communicator = { path = "../../../message_communicator"}
